--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
@@ -7,44 +7,79 @@
              mc:Ignorable="d" 
              d:DesignHeight="400" d:DesignWidth="300">
     <Grid Background="Black">
-        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="38,0,205,246" Height="56" VerticalAlignment="Bottom"/>
-        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="46,173,200,200"/>
+        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="40,100,210,250"/>
+        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="40,170,210,220"/>
         <TextBlock Name="X" Background="Green" Margin="0,368,200,0" Text="XAxis" TextAlignment="Center"/>
         <TextBlock Name="Y" Background="Yellow" Margin="100,368,100,0" Text="YAxis" TextAlignment="Center"/>
         <TextBlock Name="Z" Background="Red" Margin="200,368,0,0" Text="ZAxis" TextAlignment="Center"/>
-        <Label Foreground="White" Margin="110,200,172,75" RenderTransformOrigin="0.5,0.5">1
-        </Label>
-        <Label Foreground="White" Margin="122,207,160,57">2</Label>
-        <Label Foreground="White" Margin="122,193,152,75" RenderTransformOrigin="0.5,0.5">3
-        </Label>
-        <Label  Foreground="White" Margin="140,199,140,75">4</Label>
-        <Label  Foreground="White" Margin="110,199,152,75">5</Label>
-        <Label  Foreground="White" Margin="110,207,162,67">6</Label>
-        <Label  Foreground="White" Margin="138,207,124,68">7</Label>
-        <Label  Foreground="White" Margin="133,199,147,70">8</Label>
-        <Label  Foreground="White" Margin="100,196,178,80">9</Label>
-        <Label  Foreground="White" Margin="122,204,151,70">10</Label>
-        <StackPanel Margin="244,173,30,101">
-            <Border Background="Teal">
-        <Label VerticalAlignment="Center" Foreground="White">11</Label>
+        <Grid Margin="100, 100, 40,220">
+            <Border Background="Green" Margin="0,0,135,55" Height="25">
+                <Border Name="Button1" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">1</TextBlock>
+                </Border>
             </Border>
-        </StackPanel>
-        <Border Background="Green" Margin="262,173,11,200" >
-            <Border Name="Button12" Margin="2 ,2, 2, 2" Background="Black">
-                <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">12</TextBlock>
+            <Border Background="Green" Margin="27,0,108,55" Height="25" >
+                <Border x:Name="Button2" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White"><Run Text="2"/></TextBlock>
+                </Border>
             </Border>
-        </Border>
+            <Border Background="Green" Margin="54,0,81,55" Height="25" >
+                <Border Name="Button3" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">3</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="81,0,54,55" Height="25" >
+                <Border Name="Button4" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">4</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="108,0,27,55" >
+                <Border Name="Button5" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">5</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="135,0,0,55" Height="25" >
+                <Border Name="Button6" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">6</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="0, 27, 135, 28" >
+                <Border Name="Button7" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">7</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="27,27,108,28" >
+                <Border Name="Button8" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">8</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="54,27,81,28" >
+                <Border Name="Button9" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">9</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="81,27,54,28" >
+                <Border Name="Button10" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">10</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="108,27,27,28" >
+                <Border Name="Button11" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">11</TextBlock>
+                </Border>
+            </Border>
+            <Border Background="Green" Margin="135,27,0,28" >
+                <Border Name="Button12" Margin="2 ,2, 2, 2" Background="Black">
+                    <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">12</TextBlock>
+                </Border>
+            </Border>
+        </Grid>
         <CheckBox Name="TankCheckbox" Checked="TankCheckboxChecked" Unchecked="TankCheckboxUnchecked" IsChecked="True" Margin="221,37,65,349"></CheckBox>
         <CheckBox Name="ArcadeCheckbox" Checked="ArcadeCheckboxChecked" Unchecked="ArcadeCheckboxUnchecked" Margin="221,56,66,329"></CheckBox>
         <Label Foreground="White" Margin="235,29,19,341">Tank</Label>
         <Label Foreground="White" Margin="234,49,16,321">Arcade</Label>
-        <TextBlock Foreground="White" TextAlignment="Center" Margin="10,72,178,298">Joystick X and Y</TextBlock>
-        <Label Foreground="White" Margin="30,154,178,208">Z Axis(Joystick)</Label>
-        <Grid Name="XboxControllerGrid1" Background="Gray" Margin="38,239,212,111" Height="50" Width="50">
-            <Ellipse Name="XboxElipse" Height="2" Width="2" Fill="Black" Margin="24, 24">
-
-            </Ellipse>
-        </Grid>
+        <TextBlock Foreground="White" TextAlignment="Center" Margin="10,84,178,286">X/Y Axis</TextBlock>
+        <TextBlock TextAlignment="Center"  Foreground="White" Margin="33,153,204,232">Z Axis</TextBlock>
         <ComboBox FontSize="20" SelectedIndex="0" Name="ControllerCombobox" Margin="15,37,100,333">
             <ComboBoxItem Name="Joystick">
                 Joystick
@@ -53,7 +88,7 @@
                 Xbox Controller
             </ComboBoxItem>
         </ComboBox>
-        <TextBlock Foreground="white" FontSize="22" FontWeight="Bold" Height="50" Grid.Row="0" Margin="0,0,0,350" TextAlignment="Center">Driver Controller Selection</TextBlock>
-
+        <TextBlock Foreground="white" FontSize="22" FontWeight="Bold" Grid.Row="0" Margin="0,0,0,368" TextAlignment="Center">Driver Controller Selection</TextBlock>
+        <TextBlock Foreground="White" TextAlignment="Center" Margin="148,84,88,296">Buttons</TextBlock>
     </Grid>
 </UserControl>
