--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
@@ -7,9 +7,9 @@
              mc:Ignorable="d" 
              d:DesignHeight="200" d:DesignWidth="300">
     <Grid Background="Black">
-        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="40,84,210,216"/>
-        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="40,148,210,189"/>
-        <Grid Margin="130,103,10,167">
+        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="10,73,240,77"/>
+        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="73,91,177,96"/>
+        <Grid Margin="128,78,12,42">
             <Border Background="Green" Margin="0,0,135,55" Height="25">
                 <Border Name="Button1" Margin="2 ,2, 2, 2" Background="Black">
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">1</TextBlock>
@@ -71,15 +71,15 @@
                 </Border>
             </Border>
         </Grid>
-        <CheckBox Name="TankCheckbox" Checked="TankCheckboxChecked" Unchecked="TankCheckboxUnchecked" IsChecked="False" Margin="221,29,65,307"></CheckBox>
-        <CheckBox Name="ArcadeCheckbox" Checked="ArcadeCheckboxChecked" Unchecked="ArcadeCheckboxUnchecked" IsChecked="True" Margin="222,49,65,288"></CheckBox>
-        <Label Foreground="White" Margin="235,22,19,300">Tank</Label>
-        <Label Foreground="White" Margin="235,43,15,278">Arcade</Label>
-        <TextBlock Foreground="White" TextAlignment="Center" Margin="10,84,178,286">X/Y Axis</TextBlock>
-        <TextBlock TextAlignment="Center"  Foreground="White" Margin="33,153,204,232">Z Axis</TextBlock>
-        <TextBlock Name="SecondaryXY" Foreground="White" TextAlignment="Center" Margin="9,183,179,187" Visibility="Hidden">Secondary X/Y</TextBlock>
-        <TextBlock Name="SecondaryZ" Foreground="White" TextAlignment="Center" Margin="10,252,178,118" Visibility="Hidden">Secondary Z</TextBlock>
-        <ComboBox FontSize="20" SelectedIndex="0" Name="ControllerCombobox" Margin="10,26,105,292" SelectionChanged="ControllerComboboxSelectionChanged">
+        <CheckBox Name="TankCheckbox" Checked="TankCheckboxChecked" Unchecked="TankCheckboxUnchecked" IsChecked="False" Margin="221,29,65,157"></CheckBox>
+        <CheckBox Name="ArcadeCheckbox" Checked="ArcadeCheckboxChecked" Unchecked="ArcadeCheckboxUnchecked" IsChecked="True" Margin="222,49,65,138"></CheckBox>
+        <Label Foreground="White" Margin="235,22,19,150">Tank</Label>
+        <Label Foreground="White" Margin="235,43,15,128">Arcade</Label>
+        <TextBlock Foreground="White" TextAlignment="Center" Margin="-25,57,213,109">X/Y Axis</TextBlock>
+        <TextBlock TextAlignment="Center"  Foreground="White" Margin="65,75,172,101">Z Axis</TextBlock>
+        <TextBlock Name="SecondaryXY" Foreground="White" TextAlignment="Center" Margin="-15,121,203,60" Visibility="Hidden">Secondary X/Y</TextBlock>
+        <TextBlock Name="SecondaryZ" Foreground="White" TextAlignment="Center" Margin="37,136,151,37" Visibility="Visible" RenderTransformOrigin="0.095,0.346">Secondary Z</TextBlock>
+        <ComboBox FontSize="20" SelectedIndex="0" Name="ControllerCombobox" Margin="10,26,153,142" SelectionChanged="ControllerComboboxSelectionChanged">
             <ComboBoxItem Name="Joystick">
                 Joystick
             </ComboBoxItem>
@@ -87,14 +87,23 @@
                 Xbox Controller
             </ComboBoxItem>
         </ComboBox>
-        <TextBlock Name="DriverControllerSelection" Foreground="white" FontSize="20" FontWeight="Bold" Grid.Row="0" Margin="3,0,47,326" TextAlignment="Center">Driver Controller Selection</TextBlock>
-        <TextBlock Name="Buttons" Foreground="White" TextAlignment="Center" Margin="148,84,88,296">Buttons</TextBlock>
-        <TextBlock Name="SecondaryButtons" Foreground="White" TextAlignment="Center" Margin="118,183,58,197" Visibility="Hidden"> Secondary Buttons</TextBlock>
+        <TextBlock Name="DriverControllerSelection" Foreground="white" FontSize="20" FontWeight="Bold" Grid.Row="0" Margin="0,0,0,176" TextAlignment="Center">Driver Controller Selection</TextBlock>
+        <TextBlock Name="Buttons" Foreground="White" TextAlignment="Center" Margin="175,59,61,122">Buttons</TextBlock>
+        <TextBlock Name="SecondaryButtons" Foreground="White" TextAlignment="Center" Margin="146,129,30,54" Visibility="Hidden"> Secondary Buttons</TextBlock>
 
 
-        <local:AxisGrid x:Name="SecondaryGrid" Margin="40,200,210,150" Visibility="Hidden"></local:AxisGrid>
-        <local:ZAxisBar x:Name="SecondaryAxisBar" Margin="-66,208,106,61" Visibility="Hidden"></local:ZAxisBar>
-        <Grid Name="SecondaryButtonGrid" Margin="100, 200, 40,120" Visibility="Hidden">
+        <local:AxisGrid x:Name="SecondaryGrid" Margin="10,140,240,6" Visibility="Hidden"></local:AxisGrid>
+        <local:ZAxisBar x:Name="SecondaryAxisBar" Margin="64,153,174,34" Visibility="Hidden" RenderTransformOrigin="0.5,0.5">
+            <local:ZAxisBar.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="-1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </local:ZAxisBar.RenderTransform>
+        </local:ZAxisBar>
+        <Grid Name="SecondaryButtonGrid" Margin="128,145,12,-26" Visibility="Visible">
             <Border Background="Green" Margin="0,0,135,55" Height="25">
                 <Border Name="SecondaryButton1" Margin="2 ,2, 2, 2" Background="Black">
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">1</TextBlock>
@@ -156,6 +165,6 @@
                 </Border>
             </Border>
         </Grid>
-        
+
     </Grid>
 </UserControl>
