--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/MainWindow.xaml
@@ -14,8 +14,8 @@
     </Window.Resources>
     <Border Background="LightSlateGray">
 
-        <Viewbox>
-            <Grid Width="1300" Height="527">
+        
+            <Grid Width="1366" Height="527">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="100"/>
                     <ColumnDefinition Width="100"/>
@@ -46,13 +46,13 @@
                     <RowDefinition Height="50"/>
                 </Grid.RowDefinitions>
                 <local:JoystickWidget x:Name="JoystickWidget" Grid.Row="0" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="3" />
-                <local:AlertBox x:Name="AlertWidget" Grid.Row="0" Grid.RowSpan="8" Grid.Column="10" Grid.ColumnSpan="8"/>
-                <local:AutoSwitchControl x:Name="AutoSwitch" Grid.Row="0" Grid.Column="3" Grid.ColumnSpan="2"/>
+                <local:AlertBox x:Name="AlertWidget" Grid.Row="0" Grid.RowSpan="8" Grid.Column="10" Grid.ColumnSpan="4"/>
+                <local:AutoSwitchControl x:Name="AutoSwitch" Grid.Row="0" Grid.RowSpan="2" Grid.Column="3" Grid.ColumnSpan="2"/>
                 <local:JoystickWidget x:Name="SwitchesWidget" Grid.Row="5" Grid.RowSpan="5" Grid.Column="0" Grid.ColumnSpan="3"/>
 
 
 
             </Grid>
-        </Viewbox>
+        
     </Border>
 </Window>
