--- a/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
+++ b/2018 Robot Project/Dashboard/2018 Main Dashboard/2018 Main Dashboard/JoystickWidget.xaml
@@ -5,11 +5,11 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:_2018_Main_Dashboard"
              mc:Ignorable="d" 
-             d:DesignHeight="200" d:DesignWidth="300">
+             d:DesignHeight="250" d:DesignWidth="300">
     <Grid Background="Black">
-        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="10,73,240,77"/>
-        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="73,91,177,96"/>
-        <Grid Margin="128,78,12,42">
+        <local:AxisGrid x:Name="JoystickAxisGrid" Margin="10,73,240,127"/>
+        <local:ZAxisBar x:Name="JoystickZAxisBar" Margin="73,91,177,146"/>
+        <Grid Margin="128,78,12,92">
             <Border Background="Green" Margin="0,0,135,55" Height="25">
                 <Border Name="Button1" Margin="2 ,2, 2, 2" Background="Black">
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">1</TextBlock>
@@ -71,15 +71,15 @@
                 </Border>
             </Border>
         </Grid>
-        <CheckBox Name="TankCheckbox" Checked="TankCheckboxChecked" Unchecked="TankCheckboxUnchecked" IsChecked="False" Margin="221,29,65,157"></CheckBox>
-        <CheckBox Name="ArcadeCheckbox" Checked="ArcadeCheckboxChecked" Unchecked="ArcadeCheckboxUnchecked" IsChecked="True" Margin="222,49,65,138"></CheckBox>
-        <Label Foreground="White" Margin="235,22,19,150">Tank</Label>
-        <Label Foreground="White" Margin="235,43,15,128">Arcade</Label>
-        <TextBlock Foreground="White" TextAlignment="Center" Margin="-25,57,213,109">X/Y Axis</TextBlock>
-        <TextBlock TextAlignment="Center"  Foreground="White" Margin="65,75,172,101">Z Axis</TextBlock>
-        <TextBlock Name="SecondaryXY" Foreground="White" TextAlignment="Center" Margin="-15,121,203,60" Visibility="Hidden">Secondary X/Y</TextBlock>
-        <TextBlock Name="SecondaryZ" Foreground="White" TextAlignment="Center" Margin="37,136,151,37" Visibility="Visible" RenderTransformOrigin="0.095,0.346">Secondary Z</TextBlock>
-        <ComboBox FontSize="20" SelectedIndex="0" Name="ControllerCombobox" Margin="10,26,153,142" SelectionChanged="ControllerComboboxSelectionChanged">
+        <CheckBox Name="TankCheckbox" Checked="TankCheckboxChecked" Unchecked="TankCheckboxUnchecked" IsChecked="False" Margin="221,29,65,207"></CheckBox>
+        <CheckBox Name="ArcadeCheckbox" Checked="ArcadeCheckboxChecked" Unchecked="ArcadeCheckboxUnchecked" IsChecked="True" Margin="222,49,65,188"></CheckBox>
+        <Label Foreground="White" Margin="235,22,19,200">Tank</Label>
+        <Label Foreground="White" Margin="235,43,15,178">Arcade</Label>
+        <TextBlock Foreground="White" TextAlignment="Center" Margin="-25,57,213,159">X/Y Axis</TextBlock>
+        <TextBlock TextAlignment="Center"  Foreground="White" Margin="65,75,172,151">Z Axis</TextBlock>
+        <TextBlock Name="SecondaryXY" Foreground="White" TextAlignment="Center" Margin="-15,121,203,110" Visibility="Hidden">Secondary X/Y</TextBlock>
+        <TextBlock Name="SecondaryZ" Foreground="White" TextAlignment="Center" Margin="37,136,151,87" Visibility="Hidden" RenderTransformOrigin="0.095,0.346">Secondary Z</TextBlock>
+        <ComboBox FontSize="16" SelectedIndex="0" Name="ControllerCombobox" Margin="10,26,153,192" SelectionChanged="ControllerComboboxSelectionChanged">
             <ComboBoxItem Name="Joystick">
                 Joystick
             </ComboBoxItem>
@@ -87,13 +87,13 @@
                 Xbox Controller
             </ComboBoxItem>
         </ComboBox>
-        <TextBlock Name="DriverControllerSelection" Foreground="white" FontSize="20" FontWeight="Bold" Grid.Row="0" Margin="0,0,0,176" TextAlignment="Center">Driver Controller Selection</TextBlock>
-        <TextBlock Name="Buttons" Foreground="White" TextAlignment="Center" Margin="175,59,61,122">Buttons</TextBlock>
-        <TextBlock Name="SecondaryButtons" Foreground="White" TextAlignment="Center" Margin="146,129,30,54" Visibility="Hidden"> Secondary Buttons</TextBlock>
+        <TextBlock Name="DriverControllerSelection" Foreground="white" FontSize="20" FontWeight="Bold" Grid.Row="0" Margin="0,0,0,226" TextAlignment="Center">Driver Controller Selection</TextBlock>
+        <TextBlock Name="Buttons" Foreground="White" TextAlignment="Center" Margin="175,59,61,172">Buttons</TextBlock>
+        <TextBlock Name="SecondaryButtons" Foreground="White" TextAlignment="Center" Margin="146,129,30,104" Visibility="Hidden"> Secondary Buttons</TextBlock>
 
 
-        <local:AxisGrid x:Name="SecondaryGrid" Margin="10,140,240,6" Visibility="Hidden"></local:AxisGrid>
-        <local:ZAxisBar x:Name="SecondaryAxisBar" Margin="64,153,174,34" Visibility="Hidden" RenderTransformOrigin="0.5,0.5">
+        <local:AxisGrid x:Name="SecondaryGrid" Margin="10,140,240,56" Visibility="Hidden"></local:AxisGrid>
+        <local:ZAxisBar x:Name="SecondaryAxisBar" Margin="64,153,174,84" Visibility="Hidden" RenderTransformOrigin="0.5,0.5">
             <local:ZAxisBar.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleY="-1"/>
@@ -103,7 +103,7 @@
                 </TransformGroup>
             </local:ZAxisBar.RenderTransform>
         </local:ZAxisBar>
-        <Grid Name="SecondaryButtonGrid" Margin="128,145,12,-26" Visibility="Visible">
+        <Grid Name="SecondaryButtonGrid" Margin="128,145,12,24" Visibility="Hidden">
             <Border Background="Green" Margin="0,0,135,55" Height="25">
                 <Border Name="SecondaryButton1" Margin="2 ,2, 2, 2" Background="Black">
                     <TextBlock VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="White">1</TextBlock>
